# wgpu-infinite-grid

./: Cargo.toml  README.md
.cargo/: config.toml
src/: lib.rs
src/shader/: infinite_grid_fragment.wgsl  infinite_grid_vertex.wgsl
