[package]
name = "wgpu-infinite-grid"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bytemuck = { version = "1.13.1", features = ["derive"] }
cfg-if = "1.0.0"
cgmath = "0.18.0"
instant = "0.1.12"
pollster = "0.3.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
wasm-bindgen-futures = "0.4.30"
wgpu = "0.15.1"
winit = "0.28.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2.1"
wgpu = { version = "0.15.1", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
